--- a/Dub/Dub.Web.Dto/Dub.Web.Dto.csproj
+++ b/Dub/Dub.Web.Dto/Dub.Web.Dto.csproj
@@ -1,19 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+  <Import Project="../Dub.props" />
 
   <PropertyGroup>
     <Description>Dub.Web.Dto Class Library</Description>
-    <Authors>kant</Authors>
-    <TargetFramework>netstandard1.3</TargetFramework>
-    <AssemblyName>Dub.Web.Dto</AssemblyName>
-    <PackageId>Dub.Web.Dto</PackageId>
-    <RepositoryType>git</RepositoryType>
-    <RepositoryUrl>https://github.com/kant2002/Dub</RepositoryUrl>
-    <GenerateAssemblyTitleAttribute>false</GenerateAssemblyTitleAttribute>
-    <GenerateAssemblyDescriptionAttribute>false</GenerateAssemblyDescriptionAttribute>
-    <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
-    <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
-    <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
-    <GenerateAssemblyCopyrightAttribute>false</GenerateAssemblyCopyrightAttribute>
+    <TargetFrameworks>net45;netstandard1.3</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
@@ -22,7 +12,6 @@
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard1.3' ">
     <PackageReference Include="System.Diagnostics.Contracts" Version="4.0.1" />
-    <PackageReference Include="System.Diagnostics.Tools" Version="4.0.1" />
   </ItemGroup>
 
 </Project>
