--- a/Dub/Dub.Web.Dto/Dub.Web.Dto.csproj
+++ b/Dub/Dub.Web.Dto/Dub.Web.Dto.csproj
@@ -3,7 +3,7 @@
 
   <PropertyGroup>
     <Description>Dub.Web.Dto Class Library</Description>
-    <TargetFrameworks>net45;netstandard1.3</TargetFrameworks>
+    <TargetFrameworks>net45;netstandard1.3;netstandard2.0</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
