--- a/Dub/Dub.Web.Dto/Dub.Web.Dto.csproj
+++ b/Dub/Dub.Web.Dto/Dub.Web.Dto.csproj
@@ -3,15 +3,11 @@
 
   <PropertyGroup>
     <Description>Dub.Web.Dto Class Library</Description>
-    <TargetFrameworks>net45;netstandard1.3;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>net472;net6.0</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Dub.Web.Core\Dub.Web.Core.csproj" />
-  </ItemGroup>
-
-  <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard1.3' ">
-    <PackageReference Include="System.Diagnostics.Contracts" Version="4.0.1" />
   </ItemGroup>
 
 </Project>
